<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvAddress"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/txt_address"
        app:layout_constraintBottom_toBottomOf="@+id/tvAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAddress" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_numberOfRoom"
        app:layout_constraintBottom_toBottomOf="@+id/tvRoom"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/tvRoom" />

    <TextView
        android:id="@+id/tvRoom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/tvAddress"
        app:layout_constraintStart_toStartOf="@+id/tvAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_type"
        app:layout_constraintBottom_toBottomOf="@+id/tvType"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/tvType" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/tvRoom"
        app:layout_constraintStart_toStartOf="@+id/tvRoom"
        app:layout_constraintTop_toBottomOf="@+id/tvRoom" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_price"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/tvPrice"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="@+id/tvFurniture"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvFurniture"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_reporter"
        app:layout_constraintBottom_toBottomOf="@+id/tvReport"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/tvReport"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPrice"
        app:layout_constraintStart_toStartOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_furniture"
        app:layout_constraintBottom_toBottomOf="@+id/tvFurniture"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/tvFurniture" />

    <TextView
        android:id="@+id/tvFurniture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/tvType"
        app:layout_constraintStart_toStartOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_note"
        app:layout_constraintBottom_toBottomOf="@+id/tvNote"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/tvNote" />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/tvReport"
        app:layout_constraintStart_toStartOf="@+id/tvReport"
        app:layout_constraintTop_toBottomOf="@+id/tvReport" />

</androidx.constraintlayout.widget.ConstraintLayout>