<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/txt_name_property"
        app:layout_constraintBottom_toBottomOf="@+id/txt_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_address"
        app:layout_constraintBottom_toBottomOf="@+id/txt_address"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/txt_address" />

    <EditText
        android:id="@+id/txt_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_numberOfRoom"
        app:layout_constraintBottom_toBottomOf="@+id/txt_room"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/txt_room" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_type"
        app:layout_constraintBottom_toBottomOf="@+id/txtType"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/txtType" />

    <EditText
        android:id="@+id/txtType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txt_room"
        app:layout_constraintStart_toStartOf="@+id/txt_room"
        app:layout_constraintTop_toTopOf="@+id/notiRoom" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_reporter"
        app:layout_constraintBottom_toBottomOf="@+id/txt_reporter"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/txt_reporter" />

    <EditText
        android:id="@+id/txt_reporter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtPrice"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtNote"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/txtNote"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/notiAddress"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txt_address"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/txt_address"
        app:layout_constraintTop_toBottomOf="@+id/txt_address" />

    <TextView
        android:id="@+id/notiName"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/notiRoom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txt_room"
        app:layout_constraintStart_toStartOf="@+id/txt_room"
        app:layout_constraintTop_toBottomOf="@+id/txt_room" />

    <TextView
        android:id="@+id/notiType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/notiRoom"
        app:layout_constraintStart_toStartOf="@+id/notiRoom"
        app:layout_constraintTop_toBottomOf="@+id/txtType" />

    <TextView
        android:id="@+id/notiReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/notiType"
        app:layout_constraintStart_toStartOf="@+id/notiType"
        app:layout_constraintTop_toBottomOf="@+id/txt_reporter" />

    <EditText
        android:id="@+id/txt_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txt_address"
        app:layout_constraintStart_toStartOf="@+id/txt_address"
        app:layout_constraintTop_toBottomOf="@+id/txt_address" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_price"
        app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/txtPrice" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txtFurniture"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtFurniture"
        app:layout_constraintTop_toBottomOf="@+id/txtFurniture" />

    <TextView
        android:id="@+id/notiPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/notiType"
        app:layout_constraintStart_toStartOf="@+id/notiType"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_furniture"
        app:layout_constraintBottom_toBottomOf="@+id/txtFurniture"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/txtFurniture" />

    <EditText
        android:id="@+id/txtFurniture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtType"
        app:layout_constraintStart_toStartOf="@+id/txtType"
        app:layout_constraintTop_toBottomOf="@+id/txtType" />

    <TextView
        android:id="@+id/notiFurniture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txtFurniture"
        app:layout_constraintStart_toStartOf="@+id/txtFurniture"
        app:layout_constraintTop_toBottomOf="@+id/txtFurniture" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_note"
        app:layout_constraintBottom_toBottomOf="@+id/txtNote"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/txtNote" />

    <EditText
        android:id="@+id/txtNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txt_reporter"
        app:layout_constraintStart_toStartOf="@+id/txt_reporter"
        app:layout_constraintTop_toBottomOf="@+id/txt_reporter" />

</androidx.constraintlayout.widget.ConstraintLayout>